apps/hash-graph/lib/query-builder-derive/tests/ui/fail/next_on_discriminant.rs
use query_builder_derive::QueryBuilder;

#[derive(QueryBuilder)]
pub enum QueryPath {
    #[builder(next = "remote")]
    Nested,
}

fn main() {}
